--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>Ecwid_store</title>
   </head>
   <body>
     <img src="vaz.jpg" alt="машина" usemap="#map" id="car" />
@@ -48,13 +48,7 @@
       />
     </map>
     <div class="ec-cart-widget"></div>
-    <div>
-      <script
-        data-cfasync="false"
-        type="text/javascript"
-        src="https://app.ecwid.com/script.js?6732144&data_platform=code&data_date=2021-06-10"
-        charset="utf-8"
-      ></script>
+    <div>     
       <script
         data-cfasync="false"
         type="text/javascript"
@@ -63,16 +57,7 @@
       ></script>
       <script type="text/javascript">
         xProduct();
-      </script>
-      <script
-        data-cfasync="false"
-        type="text/javascript"
-        src="https://app.ecwid.com/script.js?6732144&data_platform=singleproduct_v2"
-        charset="utf-8"
-      ></script>
-      <script type="text/javascript">
-        xProduct();
-      </script>
+      </script>      
       <script type="text/javascript">
         Ecwid.init();
       </script>
