--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
         Ecwid.init();
       </script>
     </div>
+    
+    <script
+      data-cfasync="false"
+      type="text/javascript"
+      src="https://app.ecwid.com/script.js?6732144&data_platform=singleproduct_v2"
+      charset="utf-8"
+    ></script>
+    <script type="text/javascript">
+      xProduct();
+    </script>
     <script>
       Ecwid.OnAPILoaded.add(function () {
         const cart = document.getElementsByClassName("ec-minicart")[0];
@@ -82,35 +92,35 @@
       Ecwid.OnCartChanged.add(function (cart) {
         console.log(cart);
         haveHood = cart.items.findIndex((item, index) => {
-          if (item.product.id === 365099640) {
+          if (item.product.id === 366825254) {
             return true;
           } else {
             return false;
           }
         });
         haveWheel = cart.items.findIndex((item, index) => {
-          if (item.product.id === 333999308) {
+          if (item.product.id === 366711569) {
             return true;
           } else {
             return false;
           }
         });
         haveLight = cart.items.findIndex((item, index) => {
-          if (item.product.id === 348055491) {
+          if (item.product.id === 366825255) {
             return true;
           } else {
             return false;
           }
         });
         haveGlass = cart.items.findIndex((item, index) => {
-          if (item.product.id === 333999307) {
+          if (item.product.id === 366819760) {
             return true;
           } else {
             return false;
           }
         });
         haveDoors = cart.items.findIndex((item, index) => {
-          if (item.product.id === 346854246) {
+          if (item.product.id === 366622985) {
             return true;
           } else {
             return false;
@@ -121,28 +131,28 @@
       setHood = () => {
         console.log("Капот", haveHood);
         if (haveHood === -1) {
-          Ecwid.Cart.addProduct(365099640);
+          Ecwid.Cart.addProduct(366825254);
         }
       };
       setWheel = () => {
         console.log("Колесо", haveWheel);
         if (haveWheel === -1) {
-          Ecwid.Cart.addProduct(333999308);
+          Ecwid.Cart.addProduct(366711569);
         }
       };
       setLight = () => {
         if (haveLight === -1) {
-          Ecwid.Cart.addProduct(348055491);
+          Ecwid.Cart.addProduct(366825255);
         }
       };
       setGlass = () => {
         if (haveGlass === -1) {
-          Ecwid.Cart.addProduct(333999307);
+          Ecwid.Cart.addProduct(366819760);
         }
       };
       setDoors = () => {
         if (haveDoors === -1) {
-          Ecwid.Cart.addProduct(346854246);
+          Ecwid.Cart.addProduct(366622985);
         }
       };
       Ecwid.OnCartChanged.add(function (cart) {
